@@ -1,7 +1,7 @@
 /***************************************************************************
  *           GModelSpectralNodes.i - Spectral nodes model class            *
  * ----------------------------------------------------------------------- *
- *  copyright (C) 2012-2016 by Juergen Knoedlseder                         *
+ *  copyright (C) 2012-2017 by Juergen Knoedlseder                         *
  * ----------------------------------------------------------------------- *
  *                                                                         *
  *  This program is free software: you can redistribute it and/or modify   *
@@ -38,6 +38,7 @@ class GModelSpectralNodes : public GModelSpectral {
 public:
     // Constructors and destructors
     GModelSpectralNodes(void);
+    GModelSpectralNodes(const GModelSpectral& model, const GEnergies& energies);
     explicit GModelSpectralNodes(const GXmlElement& xml);
     GModelSpectralNodes(const GModelSpectralNodes& model);
     virtual ~GModelSpectralNodes(void);
